# path-of-ways

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  style.css
src/: app_state.rs  bosses.rs  buttons.rs  campaign.rs  db.rs  error_log.rs  external.rs  help.rs  icons.rs  images.rs  keyboard.rs  links.rs  main.rs  modal.rs  notes.rs  recipes.rs  search.rs  theme.rs  titlebar.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src/app_state/: actions.rs  page.rs  state.rs
src/bosses/: data.rs  modals.rs  model.rs  storage.rs  view.rs
src/campaign/: data.rs  modals.rs  model.rs  storage.rs  view.rs
src/images/: render.rs  storage.rs
src/links/: modals.rs  model.rs  storage.rs  view.rs
src/notes/: context.rs  editor.rs  highlight.rs  lightbox.rs  markdown.rs  modals.rs  model.rs  sidebar.rs  storage.rs  templates.rs  view.rs
src/recipes/: data.rs  modals.rs  model.rs  storage.rs  view.rs
src/search/: links_loader.rs  matching.rs  model.rs  view.rs
