[package]
name = "path-of-ways"
version = "0.1.3"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Storage", "Window", "Document", "Element", "NodeList", "Node", "Blob", "BlobPropertyBag", "Url", "HtmlAnchorElement", "HtmlInputElement", "HtmlImageElement", "HtmlTextAreaElement", "HtmlElement", "CssStyleDeclaration", "File", "FileList", "FileReader", "ClipboardEvent", "DataTransfer", "DataTransferItem", "DataTransferItemList", "KeyboardEvent", "EventTarget", "ErrorEvent", "PromiseRejectionEvent"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
pulldown-cmark = { version = "0.13.3", default-features = false, features = ["html"] }
rexie = "0.6"
uuid = { version = "1", features = ["v4", "js"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
