[package]
name = "app"
version = "0.1.3"
description = "Path of Ways — a Path of Exile 2 companion app"
authors = ["george4591"]
license = ""
repository = "https://github.com/george4591/path-of-ways"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
